--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,17 +3,29 @@
 
 .column-content {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
     /* flex-wrap: wrap; */
     flex-direction: column;
-    border: 1rem solid;
-    width: 500px;
-    height: 400px;
+    border: 0.25rem solid;
+    width: 85%;
+    padding: 5%;
+}
+
+.column-content > * {
+    flex: 1;
+}
+
+.column-content > h1, 
+.column-content > h2 {
+    align-self: flex-start;
+    margin-top: 2rem;
+    font-weight: bolder;
+    text-decoration: underline;
 }
 
 .row-content {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    align-items: flex-end;
 }
