--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2093,6 +2093,7 @@ input, select, textarea {
 		text-decoration: none;
 		text-transform: uppercase;
 		white-space: nowrap;
+		margin-bottom: 2rem;
 	}
 
 		input[type="submit"].icon:before,
@@ -2219,8 +2220,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #18bfef;
-			color: #18bfef !important;
+			box-shadow: inset 0 0 0 2px #0B9A6D;
+			color: #0B9A6D !important;
 		}
 
 		input[type="submit"].primary,
