Link color is now MSU themed green

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,7 +302,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #18bfef !important;
+			color: #0B9A6D !important;
 		}
 
 	strong, b {
@@ -2239,7 +2239,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #18bfef;
+				background-color: #0B9A6D;
 			}
 
 /* Form */
@@ -2496,7 +2496,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #18bfef;
+			border-color: #0B9A6D;
 		}
 
 	select {
@@ -2531,7 +2531,7 @@ input, select, textarea {
 
 	input[type="checkbox"]:focus + label:before,
 	input[type="radio"]:focus + label:before {
-		border-color: #18bfef;
+		border-color: #0B9A6D;
 	}
 
 	::-webkit-input-placeholder {
@@ -2916,7 +2916,7 @@ input, select, textarea {
 	}
 
 	ul.icons li a.icon:hover:before {
-		color: #18bfef;
+		color: #0B9A6D;
 	}
 
 	ul.icons.alt li .icon:before {
@@ -2924,7 +2924,7 @@ input, select, textarea {
 	}
 
 	ul.icons.alt li a.icon:hover:before {
-		box-shadow: inset 0 0 0 2px #18bfef;
+		box-shadow: inset 0 0 0 2px #0B9A6D;
 	}
 
 /* Section/Article */
@@ -3224,14 +3224,14 @@ input, select, textarea {
 	}
 
 		.pagination a:hover {
-			color: #18bfef !important;
-			border-color: #18bfef;
+			color: #0B9A6D !important;
+			border-color: #0B9A6D;
 			z-index: 1;
 		}
 
 			.pagination a:hover + a,
 			.pagination a:hover + span {
-				border-left-color: #18bfef;
+				border-left-color: #0B9A6D;
 			}
 
 		.pagination a.active {
@@ -3351,7 +3351,7 @@ input, select, textarea {
 
 			#intro a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #0B9A6D !important;
 			}
 
 		#intro strong, #intro b {
@@ -3390,8 +3390,8 @@ input, select, textarea {
 			#intro input[type="button"]:hover,
 			#intro button:hover,
 			#intro .button:hover {
-				box-shadow: inset 0 0 0 2px #18bfef;
-				color: #18bfef !important;
+				box-shadow: inset 0 0 0 2px #0B9A6D;
+				color: #0B9A6D !important;
 			}
 
 			#intro input[type="submit"].primary,
@@ -3409,7 +3409,7 @@ input, select, textarea {
 				#intro input[type="button"].primary:hover,
 				#intro button.primary:hover,
 				#intro .button.primary:hover {
-					background-color: #18bfef;
+					background-color: #0B9A6D;
 				}
 
 		#intro h1 {
@@ -3560,7 +3560,7 @@ input, select, textarea {
 
 			#header a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #0B9A6D !important;
 			}
 
 		#header strong, #header b {
@@ -3604,8 +3604,8 @@ input, select, textarea {
 		}
 
 			#header .logo:hover {
-				border-color: #18bfef !important;
-				color: #18bfef !important;
+				border-color: #0B9A6D !important;
+				color: #0B9A6D !important;
 			}
 
 		@media screen and (max-width: 980px) {
@@ -3659,7 +3659,7 @@ input, select, textarea {
 		}
 
 		#nav ul.icons li a.icon:hover:before {
-			color: #18bfef;
+			color: #0B9A6D;
 		}
 
 		#nav ul.icons.alt li .icon:before {
@@ -3667,7 +3667,7 @@ input, select, textarea {
 		}
 
 		#nav ul.icons.alt li a.icon:hover:before {
-			box-shadow: inset 0 0 0 2px #18bfef;
+			box-shadow: inset 0 0 0 2px #0B9A6D;
 		}
 
 		#nav input, #nav select, #nav textarea {
@@ -3681,7 +3681,7 @@ input, select, textarea {
 
 			#nav a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #0B9A6D !important;
 			}
 
 		#nav strong, #nav b {
@@ -3757,7 +3757,7 @@ input, select, textarea {
 					}
 
 						#nav ul.links li.active a:hover {
-							color: #18bfef !important;
+							color: #0B9A6D !important;
 						}
 
 		#nav ul.icons {
@@ -4011,7 +4011,7 @@ input, select, textarea {
 
 			#footer a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #0B9A6D !important;
 			}
 
 		#footer strong, #footer b {
@@ -4054,8 +4054,8 @@ input, select, textarea {
 			#footer input[type="button"]:hover,
 			#footer button:hover,
 			#footer .button:hover {
-				box-shadow: inset 0 0 0 2px #18bfef;
-				color: #18bfef !important;
+				box-shadow: inset 0 0 0 2px #0B9A6D;
+				color: #0B9A6D !important;
 			}
 
 			#footer input[type="submit"].primary,
@@ -4073,7 +4073,7 @@ input, select, textarea {
 				#footer input[type="button"].primary:hover,
 				#footer button.primary:hover,
 				#footer .button.primary:hover {
-					background-color: #18bfef;
+					background-color: #0B9A6D;
 				}
 
 		#footer label {
@@ -4093,7 +4093,7 @@ input, select, textarea {
 			#footer input[type="email"]:focus,
 			#footer select:focus,
 			#footer textarea:focus {
-				border-color: #18bfef;
+				border-color: #0B9A6D;
 			}
 
 		#footer select {
@@ -4128,7 +4128,7 @@ input, select, textarea {
 
 		#footer input[type="checkbox"]:focus + label:before,
 		#footer input[type="radio"]:focus + label:before {
-			border-color: #18bfef;
+			border-color: #0B9A6D;
 		}
 
 		#footer ::-webkit-input-placeholder {
@@ -4156,7 +4156,7 @@ input, select, textarea {
 		}
 
 		#footer ul.icons li a.icon:hover:before {
-			color: #18bfef;
+			color: #0B9A6D;
 		}
 
 		#footer ul.icons.alt li .icon:before {
@@ -4164,7 +4164,7 @@ input, select, textarea {
 		}
 
 		#footer ul.icons.alt li a.icon:hover:before {
-			box-shadow: inset 0 0 0 2px #18bfef;
+			box-shadow: inset 0 0 0 2px #0B9A6D;
 		}
 
 		#footer header.major .date:before, #footer header.major .date:after {
@@ -4204,14 +4204,14 @@ input, select, textarea {
 		}
 
 			#footer .pagination a:hover {
-				color: #18bfef !important;
-				border-color: #18bfef;
+				color: #0B9A6D !important;
+				border-color: #0B9A6D;
 				z-index: 1;
 			}
 
 				#footer .pagination a:hover + a,
 				#footer .pagination a:hover + span {
-					border-left-color: #18bfef;
+					border-left-color: #0B9A6D;
 				}
 
 			#footer .pagination a.active {
@@ -4448,7 +4448,7 @@ input, select, textarea {
 
 			#copyright a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #0B9A6D !important;
 			}
 
 		#copyright strong, #copyright b {
