--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,6 +12,22 @@
     margin: 0 auto;
 }
 
+#main {
+    max-width: 1000px;
+}
+
+#nav {
+    max-width: 1000px;
+}
+
+/* @media screen and (max-width: 460px) {
+
+    #main {
+        width: 100%;
+    }
+
+} */
+
 /* @media screen and (max-width: 520px) {
 
     #wrapper {
@@ -36,6 +52,16 @@
     border: 0.1rem solid;
     width: 90%;
     padding: 5%;
+}
+
+@media screen and (max-width: 480px) {
+    .column-content {
+        width: 100%;
+    }
+
+    #main > .post {
+        padding: 4rem 1rem 2rem 1rem;
+    }
 }
 
 .column-content > * {
