Content populate, fix landing page

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,13 +12,13 @@
     margin: 0 auto;
 }
 
-#main {
+#main, #nav, #footer {
     max-width: 1000px;
 }
-
+/* 
 #nav {
     max-width: 1000px;
-}
+} */
 
 /* @media screen and (max-width: 460px) {
 
@@ -82,11 +82,19 @@
 
 
 .column-content > h1, 
-.column-content > h2 {
+.column-content > h2,
+.column-content > h3 {
     align-self: flex-start;
     margin-top: 2rem;
     font-weight: bolder;
     text-decoration: underline;
+}
+
+.outcome-text {
+    /* font-weight: 100; */
+    text-decoration: underline;
+    font-size: 1.4rem;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
 }
 
 .row-content {
