--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2932,7 +2932,7 @@ input, select, textarea {
 			font-style: italic;
 		}
 
-		header > h1 + p {
+		header > h1 ~ p {
 			font-size: 1.1rem;
 			margin-top: -0.5rem;
 			line-height: 2;
