Added local multiplayer picture

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -151,3 +151,11 @@ img.roblox-dev-logo {
     width: 60%;
     margin: 0 auto;
 }
+
+.column-content img {
+    max-width: 100%;
+}
+
+.column-content label {
+    margin: 0 0 2rem 0;
+}
