Added lobby joining video

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -122,10 +122,14 @@ video {
     border-width: 5px;
     border-style: solid;
     width: 75%;
-    aspect-ratio: 1;
+    /* aspect-ratio: 1; */
     background-color: black;
 }
 
+video.full-size {
+    width: 100%;
+    /* aspect-ratio: none; */
+}
 
 
 img.sneak-easy-logo {
